tests/snapshots/snapshot_test_inbox__inbox_widget_empty.snap
---
source: tests/snapshot_test_inbox.rs
expression: snapshot
---
┌Inbox─────────────────────────────────────────────────────┐
│📬  Inbox is empty - All caught up!                        │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
