tests/snapshots/snapshot_test_inbox__inbox_widget_status_change_only.snap
---
source: tests/snapshot_test_inbox.rs
expression: snapshot
---
┌Inbox─────────────────────────────────────────────────────┐
│▶ 🔄  Status changed - Task status changed from 'In Progres│
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
