tests/snapshots/snapshot_test_inbox__inbox_widget_with_last_selected.snap
---
source: tests/snapshot_test_inbox.rs
expression: snapshot
---
┌Inbox─────────────────────────────────────────────────────┐
│  📋  Task assigned to you - You were assigned to 'Review p│
│  💬  New comment on task - John added a comment: 'Looks go│
│  🔄  Status changed - Task status changed from 'In Progres│
│▶ ⏰  Due date approaching - Task is due in 2 days (Jan 04,│
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
