tests/snapshots/snapshot_test_inbox__inbox_widget_with_notifications.snap
---
source: tests/snapshot_test_inbox.rs
expression: snapshot
---
┌Inbox─────────────────────────────────────────────────────┐
│▶ [1] Task assigned to you - You were assigned to 'Review │
│  [2] Comment on task - New comment on 'Deploy to producti│
│  [3] Status change - Task status changed to Complete (Jan│
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
